# statim

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  dump  post_ssa  pre_ssa
compiler/: common.h  lexer.c  lexer.h  logger.c  logger.h  metadata.c  metadata.h  skvoz.c  stmc.c  stmc.cpp  token.h  type.c  type.h
compiler/include/: ast.h  ast.hpp  bytecode.hpp  core.h  input_file.hpp  lexer.h  lexer.hpp  logger.h  logger.hpp  machine.hpp  metadata.h  options.hpp  parser.h  parser.hpp  scope.h  scope.hpp  source_loc.hpp  token.h  token.hpp  translation_unit.hpp  type.h  type.hpp  types.hpp  visitor.hpp
compiler/include/machine/: analysis.hpp  basicblock.hpp  function.hpp  inst.hpp  operand.hpp  rega.hpp  register.hpp  target.hpp
compiler/src/: ast.c  ast.cpp  ast.h  ast_print.cpp  btc_codegen.cpp  btc_print.cpp  bytecode.cpp  core.c  core.h  input_file.cpp  lexer.c  lexer.cpp  logger.c  logger.cpp  parser.c  parser.cpp  parser.h  scope.c  scope.cpp  scope.h  sema.cpp  source_loc.cpp  syma.cpp  token.c  type.c  type.cpp  type.h
compiler/src/machine/: function.cpp  inst.cpp  operand.cpp
docs/: README.md  liveness.md  roadmap.md  runes.md  siir.md
docs/stmc/: liveness.md  runes.md
highlighting/: README.md
highlighting/syntaxes/: statim.tmLanguage.json
samples/: a.stm  arith.stm  b.stm  mem.stm  natives.stm  return_zero.stm  token.stm
source/: stmc.cpp
source/core/: CMakeLists.txt  lexer.cpp  lexer.hpp  logger.cpp  logger.hpp  type.cpp  type.hpp
source/machine/: amd64.cpp  amd64.hpp  analysis.cpp  analysis.hpp  basicblock.cpp  basicblock.hpp  function.cpp  function.hpp  inst.cpp  inst.hpp  isel.cpp  machine_inst.cpp  machine_inst.hpp  machine_object.hpp  machine_operand.cpp  machine_operand.hpp  object.hpp  operand.cpp  operand.hpp  printer.cpp  register.hpp  writer.cpp  x64.hpp
source/machine/x64/: writer.cpp  x64.cpp  x64.hpp
source/siir/: CMakeLists.txt  allocator.cpp  allocator.hpp  argument.cpp  argument.hpp  basicblock.cpp  basicblock.hpp  cfg.cpp  cfg.hpp  constant.cpp  constant.hpp  function.cpp  function.hpp  global.cpp  global.hpp  inlineasm.hpp  instbuilder.cpp  instbuilder.hpp  instruction.cpp  instruction.hpp  llvm_translate_pass.cpp  llvm_translate_pass.hpp  local.cpp  local.hpp  machine_analysis.cpp  machine_analysis.hpp  machine_basicblock.cpp  machine_basicblock.hpp  machine_function.hpp  machine_inst.cpp  machine_inst.hpp  machine_object.hpp  machine_operand.cpp  machine_operand.hpp  print.cpp  ssa_rewrite_pass.cpp  ssa_rewrite_pass.hpp  target.cpp  target.hpp  trivial_dce_pass.hpp  (+6 more)
source/tree/: CMakeLists.txt  codegen.cpp  decl.cpp  decl.hpp  expr.cpp  expr.hpp  parser.cpp  parser.hpp  print.cpp  root.cpp  root.hpp  rune.cpp  rune.hpp  sema.cpp  stmt.cpp  stmt.hpp  syma.cpp  type.cpp  type.hpp  visitor.hpp
source/types/: CMakeLists.txt  input_file.cpp  input_file.hpp  options.hpp  source_location.hpp  translation_unit.hpp
source/x64/: CMakeLists.txt  asm_writer.cpp  inst_selection.cpp  printer.cpp  x64.cpp  x64.hpp
spbe/src/: basicblock.h  cfg.h  common.h  constant.h  instruction.h  target.h  type.h  value.h
std/: README.md  rt.c  rt.ll
stmc/: .clangd  .gitignore  CMakeLists.txt  README.md  roadmap.md
stmc/highlighting/: README.md  package.json
stmc/highlighting/syntaxes/: statim.tmLanguage.json
stmc/samples/: README.md  file.stm  mem.stm  natives.stm  string.stm
stmc/source/: CMakeLists.txt  stmc.cpp
stmc/source/core/: lexer.cpp  stmc.hpp
stmc/source/siir/: allocator.cpp  basicblock.cpp  cfg.cpp  cfg.hpp  function.cpp  global.hpp  instruction.hpp  local.cpp  machine_analysis.cpp  machine_analysis.hpp  machine_basicblock.hpp  machine_function.cpp  machine_function.hpp  machine_inst.cpp  machine_inst.hpp  machine_object.cpp  machine_object.hpp  machine_operand.cpp  machine_operand.hpp  machine_register.hpp  pass.hpp  ssa_rewrite_pass.hpp  target.cpp  target.hpp  trivial_dce_pass.cpp  trivial_dce_pass.hpp  type.cpp  use.cpp  use.hpp  user.hpp
stmc/source/tree/: codegen.cpp  expr.cpp  expr.hpp  parser.cpp  root.hpp  rune.cpp  scope.cpp  scope.hpp  stmt.cpp  stmt.hpp  syma.cpp  type.cpp  type.hpp
stmc/source/types/: input_file.cpp  options.hpp  token.cpp  token.hpp  translation_unit.hpp  types.hpp
stmc/source/x64/: inst_selection.cpp  x64.cpp
stmc/test/: test_codegen.cpp  test_x64.cpp
test/: test_amd64.cpp  test_codegen.cpp  test_index.cpp  test_lexer.cpp  test_parser.cpp  test_sema.cpp  test_syma.cpp
